[M-09] Implement HateOAS for findAll and FindById